--- a/challenge-3/result-service.yml
+++ b/challenge-3/result-service.yml
@@ -1,16 +1,13 @@
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: result-service
+  name: result
   namespace: vote
 spec:
   type: NodePort
+  selector:
+    app: result
   ports:
-    - port: 5001
+    - port: 8081       # port usługi zgodny z wymaganiami labu
       targetPort: 80
       nodePort: 31001
-  selector:
-    app: result-deployment
-
-    
