--- a/challenge-3/vote-service.yml
+++ b/challenge-3/vote-service.yml
@@ -1,14 +1,13 @@
----
 apiVersion: v1
 kind: Service
 metadata:
-   name: vote-service
-   namespace: vote
+  name: vote
+  namespace: vote
 spec:
-   type: NodePort
-   ports:
-    - port: 5000
+  type: NodePort
+  selector:
+    app: vote
+  ports:
+    - port: 8080
       targetPort: 80
       nodePort: 31000
-   selector:
-    app: vote-deployment
